--- a/demos/api/execute_custom_opencl_kernel.ipynb
+++ b/demos/api/execute_custom_opencl_kernel.ipynb
@@ -17,31 +17,14 @@
    "execution_count": 1,
    "id": "48b37b2b-e1ef-4cdf-b3ec-a3be0d461782",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
-       "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              535.230.02\n",
-       "\tDevice Type:                 GPU\n",
-       "\tCompute Units:               128\n",
-       "\tGlobal Memory Size:          24217 MB\n",
-       "\tMaximum Object Size:         6054 MB\n",
-       "\tMax Clock Frequency:         2625 MHz\n",
-       "\tImage Support:               Yes"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyclesperanto as cle\n",
     "import numpy as np\n",
+    "import timeit\n",
     "\n",
-    "cle.select_device()"
+    "cle.select_device(1, \"gpu\")\n",
+    "cle.wait_for_kernel_to_finish(True)"
    ]
   },
   {
@@ -91,17 +74,17 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m\n",
-       "\u001b[0mcle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnative_execute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0manchor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mkernel_source\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mkernel_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mglobal_size\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtuple\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mlocal_size\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtuple\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mparameters\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdevice\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Device\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "\u001b[31mSignature:\u001b[39m\n",
+       "cle.native_execute(\n",
+       "    anchor=\u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    kernel_source: str = \u001b[33m''\u001b[39m,\n",
+       "    kernel_name: str = \u001b[33m''\u001b[39m,\n",
+       "    global_size: tuple = (\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m),\n",
+       "    local_size: tuple = (\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m),\n",
+       "    parameters: dict = {},\n",
+       "    device: pyclesperanto._pyclesperanto._Device = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       ")\n",
+       "\u001b[31mDocstring:\u001b[39m\n",
        "Execute an OpenCL kernel from a file or a string\n",
        "\n",
        "Call, build, and execute a kernel compatible with OpenCL language.\n",
@@ -132,8 +115,8 @@
        "    right type and in the right order as specified in the open.cl file.\n",
        "device : Device, default = None\n",
        "    The device to execute the kernel on. If None, use the current device\n",
-       "\u001b[0;31mFile:\u001b[0m      /data/clesperanto/pyclesperanto/pyclesperanto/_functionalities.py\n",
-       "\u001b[0;31mType:\u001b[0m      function"
+       "\u001b[31mFile:\u001b[39m      /data/clesperanto/pyclesperanto/pyclesperanto/_functionalities.py\n",
+       "\u001b[31mType:\u001b[39m      function"
       ]
      },
      "metadata": {},
@@ -201,7 +184,7 @@
     "        kernel_source=add_arrays_kernel,\n",
     "        kernel_name=\"add_arrays\",\n",
     "        global_size=arr_a.size,\n",
-    "        local_size=(1, 1, 1),\n",
+    "        local_size=(0, 0, 0),\n",
     "        parameters=param_dict,\n",
     "    )"
    ]
@@ -396,13 +379,23 @@
    "execution_count": 9,
    "id": "f2eb9383-8b6b-47a2-aed4-952d8e368a50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50.1 μs ± 112 ns per loop (mean ± std. dev. of 3 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
+    "%%timeit -r 3\n",
     "cle.execute(\n",
     "        kernel_source=add_arrays_kernel,\n",
     "        kernel_name=\"add_arrays\",\n",
     "        global_size=arr_a.shape,\n",
-    "        parameters=param_dict\n",
+    "        parameters=param_dict,\n",
+    "        local_size=(0,0,0)\n",
     "    )"
    ]
   },
@@ -513,22 +506,6 @@
     "print(\"output array:\", arr_c.shape)\n",
     "cle.pull(arr_c)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3b27527-cd91-408f-bc1c-aa0302fc8c96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99b3f364-409b-4156-a882-74a37b48ee8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -547,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
