--- a/demos/api/kernel_usage.ipynb
+++ b/demos/api/kernel_usage.ipynb
@@ -5,8 +5,9 @@
    "id": "fa467b9c",
    "metadata": {},
    "source": [
-    "# Backends\n",
-    "The default backend is always [pyopencl](https://documen.tician.de/pyopencl/) based."
+    "# How to apply an operation on an array\n",
+    "\n",
+    "pyclesperanto is a processing library, it can apply operations on an array of data using the GPU for acceleration instead of the CPU like classical libraries."
    ]
   },
   {
@@ -18,11 +19,16 @@
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8366 MB\n",
-       "\tMaximum Object Size: 2091 MB"
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.274.02\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24217 MB\n",
+       "\tLocal Memory Size:           0 MB\n",
+       "\tMaximum Buffer Size:         6054 MB\n",
+       "\tMax Clock Frequency:         2625 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
      "execution_count": 1,
@@ -34,23 +40,29 @@
     "import numpy as np\n",
     "import pyclesperanto as cle\n",
     "\n",
-    "cle.get_device()"
+    "cle.select_device(1, \"gpu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc4594e-31e6-4dd3-9f8a-189864318018",
+   "metadata": {},
+   "source": [
+    "## We first need an array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dc4eaf76-f528-4256-a611-02ea3053bb73",
+   "execution_count": 3,
+   "id": "160fd8fa-5d6a-43a0-8eea-738d4a65e1f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8366 MB\n",
-       "\tMaximum Object Size: 2091 MB"
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6],\n",
+       "       [7, 8, 9]])"
       ]
      },
      "execution_count": 3,
@@ -59,7 +71,26 @@
     }
    ],
    "source": [
-    "cle.select_device()"
+    "array = np.asarray([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd64ba38-4b28-48a9-a359-f33f66641a4a",
+   "metadata": {},
+   "source": [
+    "`array` is a numpy array and is host on the CPU memory, ready to be process as we see fit."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc67fa8-9f22-44fe-abbe-3c3a8329058b",
+   "metadata": {},
+   "source": [
+    "## Apply a clesperanto operation\n",
+    "\n",
+    "clesperanto is compose of a large list of operation that ca be applied on arrays. For this example we will use on of the most basic operation to add a scalar (`5`) to our array. The operation will return us with a new array as a result."
    ]
   },
   {
@@ -70,8 +101,15 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<pre>array([[ 6,  7,  8],\n",
+       "       [ 9, 10, 11],\n",
+       "       [12, 13, 14]], dtype=int32, mtype=buffer)</pre>"
+      ],
       "text/plain": [
-       "array([6, 7, 8], mtype=buffer)"
+       "array([[ 6,  7,  8],\n",
+       "       [ 9, 10, 11],\n",
+       "       [12, 13, 14]], dtype=int32, mtype=buffer)"
       ]
      },
      "execution_count": 4,
@@ -80,9 +118,82 @@
     }
    ],
    "source": [
-    "array = cle.push(np.asarray([1, 2, 3]))\n",
-    "cle.add_image_and_scalar(array, scalar = 5)"
+    "new_array = cle.add_image_and_scalar(array, scalar = 5)\n",
+    "new_array"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab781254-a0c4-4790-9d6a-79a40486727d",
+   "metadata": {},
+   "source": [
+    "We successfully applied a GPU operation to our array!\n",
+    "\n",
+    "## For You Information\n",
+    "\n",
+    "It is important to note that the `new_array` generated is not on the host (CPU) memory but on the GPU memory. To transfert it back to the CPU we would need to call the function `push()` or the method `.get()`.\n",
+    "> See the [push/pull/create](push_pull_create.ipynb) and the [Memory Management](memory_management.ipynb) notebooks\n",
+    "\n",
+    "If you do not know how a specific function work, you can access its documentation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9dfed9cf-3889-41a8-bcc8-cf18ebec03e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[31mSignature:\u001b[39m\n",
+       "cle.add_image_and_scalar(\n",
+       "    input_image: Union[numpy.ndarray, pyclesperanto._pyclesperanto._Array],\n",
+       "    output_image: Union[numpy.ndarray, pyclesperanto._pyclesperanto._Array, NoneType] = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    scalar: float = \u001b[32m1\u001b[39m,\n",
+       "    device: Optional[pyclesperanto._pyclesperanto._Device] = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       ") -> Union[numpy.ndarray, pyclesperanto._pyclesperanto._Array]\n",
+       "\u001b[31mDocstring:\u001b[39m\n",
+       "Adds a scalar value s to all pixels x of a given image X. <pre>f(x, s) = x +\n",
+       "s</pre>\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "input_image: Image\n",
+       "    Input image to process.\n",
+       "output_image: Optional[Image] (= None)\n",
+       "    Output image.\n",
+       "scalar: float (= 1)\n",
+       "    Scalar number to add to all pixels.\n",
+       "device: Optional[Device] (= None)\n",
+       "    Device to perform the operation on.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "Image\n",
+       "\n",
+       "References\n",
+       "----------\n",
+       "[1] https://clij.github.io/clij2-docs/reference_addImageAndScalar\n",
+       "\u001b[31mFile:\u001b[39m      /data/clesperanto/pyclesperanto/pyclesperanto/_tier1.py\n",
+       "\u001b[31mType:\u001b[39m      function"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cle.add_image_and_scalar?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d861713-11bc-4932-a1fc-c266794843e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -101,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
