--- a/demos/basics/arithmetic_operators.ipynb
+++ b/demos/basics/arithmetic_operators.ipynb
@@ -390,7 +390,9 @@
     "- `arr >= array` (`cle.greater_or_equal`)\n",
     "- `arr < array` (`cle.smaller`)\n",
     "- `arr <= array` (`cle.smaller_or_equal`)\n",
-    "- `arr == array` (`cle.equal`)"
+    "- `arr == array` (`cle.equal`)\n",
+    "\n",
+    "As well as most of the classic mathematical operations such as `exponential`, `cos` and `sin`, etc."
    ]
   },
   {
@@ -400,7 +402,7 @@
    "source": [
     "### Optimization\n",
     "\n",
-    "For better memory management and speed optimization, it is recommended to rely on function (e.g. `cle.multiply_images`, etc.) instead of operators. Especially if ressources are scarse."
+    "For better memory management and speed optimization, it is recommended to rely on full name function (e.g. `cle.multiply_images`, etc.) instead of operators. Especially if ressources are scarse."
    ]
   },
   {
@@ -428,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
