--- a/demos/basics/browse_operations.ipynb
+++ b/demos/basics/browse_operations.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0e59ba95-eb9f-4868-8def-f1679a84549e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 2080 SUPER (OpenCL 3.0 CUDA)\n",
-       "\tType: GPU\n",
-       "\tCompute Units: 48\n",
-       "\tGlobal Memory Size: 8358 MB\n",
-       "\tMaximum Object Size: 2089 MB"
+       "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              535.274.02\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               128\n",
+       "\tGlobal Memory Size:          24217 MB\n",
+       "\tLocal Memory Size:           0 MB\n",
+       "\tMaximum Buffer Size:         6054 MB\n",
+       "\tMax Clock Frequency:         2625 MHz\n",
+       "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +29,7 @@
    "source": [
     "import pyclesperanto as cle\n",
     "\n",
-    "cle.get_device()"
+    "cle.select_device(1, \"gpu\")"
    ]
   },
   {
@@ -38,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "abdeb48a-1751-44a9-aba5-9250e159ab71",
    "metadata": {},
    "outputs": [],
@@ -48,17 +53,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9447a1d4-4f87-4377-92c3-34fa6cd6a78c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "213"
+       "335"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ae64c46c-8fca-4f88-aab3-72b92a877664",
    "metadata": {},
    "outputs": [
@@ -79,29 +84,42 @@
        "['Array',\n",
        " 'Device',\n",
        " 'Image',\n",
-       " 'Union',\n",
+       " 'Optional',\n",
        " 'absolute',\n",
        " 'absolute_difference',\n",
        " 'add_image_and_scalar',\n",
        " 'add_images',\n",
        " 'add_images_weighted',\n",
+       " 'affine_transform',\n",
        " 'array_equal',\n",
+       " 'artificial_tissue',\n",
        " 'asarray',\n",
        " 'available_device_names',\n",
        " 'binary_and',\n",
+       " 'binary_closing',\n",
+       " 'binary_dilate',\n",
        " 'binary_edge_detection',\n",
+       " 'binary_erode',\n",
+       " 'binary_infsup',\n",
        " 'binary_not',\n",
+       " 'binary_opening',\n",
        " 'binary_or',\n",
        " 'binary_subtract',\n",
+       " 'binary_supinf',\n",
        " 'binary_xor',\n",
        " 'block_enumerate',\n",
+       " 'bottom_hat',\n",
        " 'bottom_hat_box',\n",
        " 'bottom_hat_sphere',\n",
        " 'bounding_box',\n",
-       " 'cbrt',\n",
+       " 'categories',\n",
        " 'center_of_mass',\n",
+       " 'centroids_of_labels',\n",
+       " 'circular_shift',\n",
        " 'cl_info',\n",
+       " 'clahe',\n",
        " 'clip',\n",
+       " 'closing',\n",
        " 'closing_box',\n",
        " 'closing_labels',\n",
        " 'closing_sphere',\n",
@@ -109,8 +127,10 @@
        " 'concatenate_along_x',\n",
        " 'concatenate_along_y',\n",
        " 'concatenate_along_z',\n",
+       " 'connected_component_labeling',\n",
        " 'connected_components_labeling',\n",
        " 'convolve',\n",
+       " 'convolve_fft',\n",
        " 'copy',\n",
        " 'copy_horizontal_slice',\n",
        " 'copy_slice',\n",
@@ -121,124 +141,208 @@
        " 'crop',\n",
        " 'crop_border',\n",
        " 'cubic_root',\n",
+       " 'deconvolve_fft',\n",
        " 'default_initialisation',\n",
        " 'degrees_to_radians',\n",
+       " 'deskew_x',\n",
+       " 'deskew_y',\n",
        " 'detect_label_edges',\n",
+       " 'detect_maxima',\n",
        " 'detect_maxima_box',\n",
+       " 'detect_minima',\n",
        " 'detect_minima_box',\n",
        " 'difference_of_gaussian',\n",
        " 'dilate_box',\n",
        " 'dilate_labels',\n",
        " 'dilate_sphere',\n",
+       " 'dilation',\n",
        " 'divide_by_gaussian_background',\n",
-       " 'divide_image_and_scalar',\n",
        " 'divide_images',\n",
+       " 'divide_scalar_by_image',\n",
        " 'equal',\n",
        " 'equal_constant',\n",
        " 'erode_box',\n",
+       " 'erode_connected_labels',\n",
        " 'erode_labels',\n",
        " 'erode_sphere',\n",
+       " 'eroded_otsu_labeling',\n",
+       " 'erosion',\n",
        " 'exclude_labels',\n",
        " 'exclude_labels_on_edges',\n",
+       " 'exclude_labels_outside_size_range',\n",
+       " 'exclude_labels_with_map_values_out_of_range',\n",
+       " 'exclude_labels_with_map_values_within_range',\n",
+       " 'exclude_large_labels',\n",
+       " 'exclude_small_labels',\n",
+       " 'execute',\n",
        " 'exponential',\n",
        " 'extend_labeling_via_voronoi',\n",
-       " 'fabs',\n",
+       " 'extended_depth_of_focus_sobel_projection',\n",
+       " 'extended_depth_of_focus_variance_projection',\n",
+       " 'extension_ratio_map',\n",
+       " 'fft',\n",
+       " 'fft_smooth_shape',\n",
+       " 'filter_label_by_size',\n",
        " 'flag_existing_labels',\n",
        " 'flip',\n",
        " 'gamma_correction',\n",
+       " 'gauss_otsu_labeling',\n",
        " 'gaussian_blur',\n",
+       " 'gaussian_derivative',\n",
        " 'generate_binary_overlap_matrix',\n",
        " 'generate_distance_matrix',\n",
+       " 'generate_proximal_neighbors_matrix',\n",
        " 'generate_touch_matrix',\n",
        " 'get_device',\n",
-       " 'gpu_info',\n",
        " 'gradient_x',\n",
        " 'gradient_y',\n",
        " 'gradient_z',\n",
+       " 'grayscale_closing',\n",
+       " 'grayscale_dilate',\n",
+       " 'grayscale_erode',\n",
+       " 'grayscale_opening',\n",
        " 'greater',\n",
        " 'greater_constant',\n",
        " 'greater_or_equal',\n",
        " 'greater_or_equal_constant',\n",
        " 'hessian_eigenvalues',\n",
+       " 'hessian_gaussian_eigenvalues',\n",
        " 'histogram',\n",
+       " 'ifft',\n",
        " 'imshow',\n",
+       " 'info',\n",
        " 'invert',\n",
        " 'is_image',\n",
        " 'jaccard_index',\n",
        " 'label',\n",
+       " 'label_bounding_box',\n",
+       " 'label_mean_intensity_map',\n",
+       " 'label_pixel_count_map',\n",
        " 'label_spots',\n",
        " 'labelled_spots_to_pointlist',\n",
+       " 'laplace',\n",
        " 'laplace_box',\n",
        " 'laplace_diamond',\n",
        " 'large_hessian_eigenvalue',\n",
        " 'list_available_backends',\n",
        " 'list_available_devices',\n",
-       " 'list_operations',\n",
        " 'local_cross_correlation',\n",
        " 'logarithm',\n",
        " 'mask',\n",
        " 'mask_label',\n",
        " 'masked_voronoi_labeling',\n",
        " 'maximum_box',\n",
+       " 'maximum_extension_map',\n",
+       " 'maximum_filter',\n",
        " 'maximum_image_and_scalar',\n",
        " 'maximum_images',\n",
+       " 'maximum_intensity_map',\n",
        " 'maximum_of_all_pixels',\n",
+       " 'maximum_of_touching_neighbors',\n",
+       " 'maximum_of_touching_neighbors_map',\n",
+       " 'maximum_position',\n",
        " 'maximum_sphere',\n",
        " 'maximum_x_projection',\n",
        " 'maximum_y_projection',\n",
        " 'maximum_z_projection',\n",
        " 'mean_box',\n",
+       " 'mean_extension_map',\n",
+       " 'mean_filter',\n",
+       " 'mean_intensity_map',\n",
        " 'mean_of_all_pixels',\n",
+       " 'mean_of_touching_neighbors',\n",
+       " 'mean_of_touching_neighbors_map',\n",
        " 'mean_sphere',\n",
        " 'mean_squared_error',\n",
        " 'mean_x_projection',\n",
        " 'mean_y_projection',\n",
        " 'mean_z_projection',\n",
+       " 'median',\n",
        " 'median_box',\n",
+       " 'median_of_touching_neighbors',\n",
+       " 'median_of_touching_neighbors_map',\n",
        " 'median_sphere',\n",
+       " 'merge_touching_labels',\n",
        " 'minimum_box',\n",
+       " 'minimum_filter',\n",
        " 'minimum_image_and_scalar',\n",
        " 'minimum_images',\n",
+       " 'minimum_intensity_map',\n",
        " 'minimum_of_all_pixels',\n",
        " 'minimum_of_masked_pixels',\n",
-       " 'minimum_of_masked_pixels_reduction',\n",
+       " 'minimum_of_touching_neighbors',\n",
+       " 'minimum_of_touching_neighbors_map',\n",
+       " 'minimum_position',\n",
        " 'minimum_sphere',\n",
        " 'minimum_x_projection',\n",
        " 'minimum_y_projection',\n",
        " 'minimum_z_projection',\n",
-       " 'mod',\n",
+       " 'mode',\n",
        " 'mode_box',\n",
+       " 'mode_of_touching_neighbors',\n",
+       " 'mode_of_touching_neighbors_map',\n",
        " 'mode_sphere',\n",
        " 'modulo_images',\n",
-       " 'multiply_image_and_coordinate',\n",
+       " 'morphological_chan_vese',\n",
+       " 'multiply_image_and_position',\n",
        " 'multiply_image_and_scalar',\n",
        " 'multiply_images',\n",
        " 'multiply_matrix',\n",
        " 'nan_to_num',\n",
+       " 'native_execute',\n",
+       " 'nonzero_maximum',\n",
        " 'nonzero_maximum_box',\n",
        " 'nonzero_maximum_diamond',\n",
+       " 'nonzero_minimum',\n",
        " 'nonzero_minimum_box',\n",
        " 'nonzero_minimum_diamond',\n",
+       " 'normalize',\n",
        " 'not_equal',\n",
        " 'not_equal_constant',\n",
+       " 'np',\n",
+       " 'onlyzero_overwrite_maximum',\n",
        " 'onlyzero_overwrite_maximum_box',\n",
        " 'onlyzero_overwrite_maximum_diamond',\n",
+       " 'opening',\n",
        " 'opening_box',\n",
        " 'opening_labels',\n",
        " 'opening_sphere',\n",
+       " 'operation',\n",
+       " 'operations',\n",
+       " 'pad',\n",
        " 'paste',\n",
-       " 'plugin_function',\n",
+       " 'percentile',\n",
+       " 'pixel_count_map',\n",
+       " 'pointlist_to_labelled_spots',\n",
        " 'power',\n",
        " 'power_images',\n",
+       " 'proximal_neighbor_count',\n",
+       " 'proximal_neighbor_count_map',\n",
        " 'pull',\n",
        " 'push',\n",
        " 'radians_to_degrees',\n",
        " 'range',\n",
-       " 'read_values_from_coordinates',\n",
+       " 'read_intensities_from_map',\n",
+       " 'read_values_from_positions',\n",
        " 'reciprocal',\n",
+       " 'reduce_labels_to_centroids',\n",
+       " 'reduce_labels_to_label_edges',\n",
+       " 'reduce_stack',\n",
        " 'relabel_sequential',\n",
+       " 'remove_labels',\n",
+       " 'remove_labels_on_edges',\n",
+       " 'remove_labels_with_map_values_out_of_range',\n",
+       " 'remove_labels_with_map_values_within_range',\n",
+       " 'remove_large_labels',\n",
+       " 'remove_small_labels',\n",
+       " 'replace_intensities',\n",
+       " 'replace_intensity',\n",
        " 'replace_value',\n",
        " 'replace_values',\n",
+       " 'rigid_transform',\n",
+       " 'rotate',\n",
+       " 'sato_filter',\n",
+       " 'scale',\n",
        " 'select_backend',\n",
        " 'select_device',\n",
        " 'set',\n",
@@ -250,7 +354,7 @@
        " 'set_ramp_y',\n",
        " 'set_ramp_z',\n",
        " 'set_row',\n",
-       " 'set_wait_for_kernel_to_finish',\n",
+       " 'set_wait_for_kernel_finish',\n",
        " 'set_where_x_equals_y',\n",
        " 'set_where_x_greater_than_y',\n",
        " 'set_where_x_smaller_than_y',\n",
@@ -260,14 +364,23 @@
        " 'smaller_constant',\n",
        " 'smaller_or_equal',\n",
        " 'smaller_or_equal_constant',\n",
+       " 'smooth_connected_labels',\n",
+       " 'smooth_labels',\n",
        " 'sobel',\n",
-       " 'sqrt',\n",
+       " 'spots_to_pointlist',\n",
        " 'square',\n",
        " 'square_root',\n",
        " 'squared_difference',\n",
+       " 'standard_deviation',\n",
        " 'standard_deviation_box',\n",
+       " 'standard_deviation_intensity_map',\n",
+       " 'standard_deviation_of_touching_neighbors',\n",
+       " 'standard_deviation_of_touching_neighbors_map',\n",
        " 'standard_deviation_sphere',\n",
+       " 'statistics_of_background_and_labelled_pixels',\n",
+       " 'statistics_of_labelled_pixels',\n",
        " 'std_z_projection',\n",
+       " 'sub_stack',\n",
        " 'subtract_gaussian_background',\n",
        " 'subtract_image_from_scalar',\n",
        " 'subtract_images',\n",
@@ -277,21 +390,35 @@
        " 'sum_y_projection',\n",
        " 'sum_z_projection',\n",
        " 'threshold_otsu',\n",
+       " 'top_hat',\n",
        " 'top_hat_box',\n",
        " 'top_hat_sphere',\n",
+       " 'touching_neighbor_count_map',\n",
+       " 'translate',\n",
        " 'transpose_xy',\n",
        " 'transpose_xz',\n",
        " 'transpose_yz',\n",
+       " 'tubeness',\n",
        " 'undefined_to_zero',\n",
+       " 'unpad',\n",
        " 'variance_box',\n",
+       " 'variance_filter',\n",
        " 'variance_sphere',\n",
        " 'voronoi_labeling',\n",
        " 'voronoi_otsu_labeling',\n",
        " 'wait_for_kernel_to_finish',\n",
-       " 'write_values_to_coordinates']"
+       " 'warnings',\n",
+       " 'write_values_to_positions',\n",
+       " 'x_position_of_maximum_x_projection',\n",
+       " 'x_position_of_minimum_x_projection',\n",
+       " 'y_position_of_maximum_y_projection',\n",
+       " 'y_position_of_minimum_y_projection',\n",
+       " 'z_position_of_maximum_z_projection',\n",
+       " 'z_position_of_minimum_z_projection',\n",
+       " 'z_position_projection']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,22 +429,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "23702f2e-f194-46c6-b406-b28d6d20b4b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\u001b[0;31mSignature:\u001b[0m\n",
-       "\u001b[0mcle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabsolute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0minput_image\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Array\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0moutput_image\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Array\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m    \u001b[0mdevice\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Device\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mUnion\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pyclesperanto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Array\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m <no docstring>\n",
-       "\u001b[0;31mFile:\u001b[0m      ~/Libraries/miniconda3/envs/build8/lib/python3.11/site-packages/pyclesperanto/_tier1.py\n",
-       "\u001b[0;31mType:\u001b[0m      function"
+       "\u001b[31mSignature:\u001b[39m\n",
+       "cle.absolute(\n",
+       "    input_image: Union[numpy.ndarray, pyclesperanto._pyclesperanto._Array],\n",
+       "    output_image: Union[numpy.ndarray, pyclesperanto._pyclesperanto._Array, NoneType] = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    device: Optional[pyclesperanto._pyclesperanto._Device] = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       ") -> Union[numpy.ndarray, pyclesperanto._pyclesperanto._Array]\n",
+       "\u001b[31mDocstring:\u001b[39m\n",
+       "Computes the absolute value of every individual pixel x in a given image.\n",
+       "<pre>f(x) = |x| </pre>\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "input_image: Image\n",
+       "    The input image to be processed.\n",
+       "output_image: Optional[Image] (= None)\n",
+       "    Output image where results are written into.\n",
+       "device: Optional[Device] (= None)\n",
+       "    Device to perform the operation on.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "Image\n",
+       "\n",
+       "References\n",
+       "----------\n",
+       "[1] https://clij.github.io/clij2-docs/reference_absolute\n",
+       "\u001b[31mFile:\u001b[39m      /data/clesperanto/pyclesperanto/pyclesperanto/_tier1.py\n",
+       "\u001b[31mType:\u001b[39m      function"
       ]
      },
      "metadata": {},
@@ -330,8 +476,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e110de5a-f79d-4079-92f3-151a0e04807c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computes the absolute value of every individual pixel x in a given image.\n",
+      "<pre>f(x) = |x| </pre>\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "input_image: Image\n",
+      "    The input image to be processed.\n",
+      "output_image: Optional[Image] (= None)\n",
+      "    Output image where results are written into.\n",
+      "device: Optional[Device] (= None)\n",
+      "    Device to perform the operation on.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "Image\n",
+      "\n",
+      "References\n",
+      "----------\n",
+      "[1] https://clij.github.io/clij2-docs/reference_absolute\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cle.absolute.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdfbdd9e-1cd4-42fa-bb8c-479b31661984",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -353,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
