--- a/demos/basics/colors.ipynb
+++ b/demos/basics/colors.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Plot labels map with colours\n",
     "\n",
+    "__WARNING:__ `imshow()` is a display features available as a quick and easy support but proper visualisation should be done with dedicated library such as `matplotlib`. This functionnality may be removed from clesperanto in future version.\n",
+    "\n",
     "This notebook demontrate how to use the `labels` parameter to display label images with colour with pyclesperanto `imshow`.\n",
     "\n",
     "> Although it was introduced in previous version, we do not encourage the use of pyclesperanto `imread`, `imshow` functions. We encourage you to rely on dedicated library (e.g. `scikit-image`, `matplotlib`, etc.) for such operations.\n"
@@ -92,6 +94,14 @@
    "source": [
     "cle.imshow(image, labels=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd97e0c2-bdcf-4c8d-b6c2-25f9536015f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -110,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
