--- a/demos/api/select_devices.ipynb
+++ b/demos/api/select_devices.ipynb
@@ -42,9 +42,9 @@
     {
      "data": {
       "text/plain": [
-       "['AMD Ryzen 9 7950X 16-Core Processor',\n",
+       "['NVIDIA GeForce RTX 4090',\n",
        " 'NVIDIA GeForce RTX 4090',\n",
-       " 'NVIDIA GeForce RTX 4090']"
+       " 'AMD Ryzen 9 7950X 16-Core Processor']"
       ]
      },
      "execution_count": 2,
@@ -76,11 +76,12 @@
       "text/plain": [
        "(OpenCL) AMD Ryzen 9 7950X 16-Core Processor (OpenCL 3.0 (Build 0))\n",
        "\tVendor:                      Intel(R) Corporation\n",
-       "\tDriver Version:              2024.18.10.0.08_160000\n",
+       "\tDriver Version:              2025.20.10.0.23_160000\n",
        "\tDevice Type:                 CPU\n",
        "\tCompute Units:               32\n",
        "\tGlobal Memory Size:          127926 MB\n",
-       "\tMaximum Object Size:         63963 MB\n",
+       "\tLocal Memory Size:           0 MB\n",
+       "\tMaximum Buffer Size:         63963 MB\n",
        "\tMax Clock Frequency:         0 MHz\n",
        "\tImage Support:               Yes"
       ]
@@ -105,11 +106,12 @@
       "text/plain": [
        "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
        "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              535.216.01\n",
+       "\tDriver Version:              535.274.02\n",
        "\tDevice Type:                 GPU\n",
        "\tCompute Units:               128\n",
        "\tGlobal Memory Size:          24183 MB\n",
-       "\tMaximum Object Size:         6045 MB\n",
+       "\tLocal Memory Size:           0 MB\n",
+       "\tMaximum Buffer Size:         6045 MB\n",
        "\tMax Clock Frequency:         2520 MHz\n",
        "\tImage Support:               Yes"
       ]
@@ -143,11 +145,12 @@
       "text/plain": [
        "(OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
        "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              535.216.01\n",
+       "\tDriver Version:              535.274.02\n",
        "\tDevice Type:                 GPU\n",
        "\tCompute Units:               128\n",
        "\tGlobal Memory Size:          24217 MB\n",
-       "\tMaximum Object Size:         6054 MB\n",
+       "\tLocal Memory Size:           0 MB\n",
+       "\tMaximum Buffer Size:         6054 MB\n",
        "\tMax Clock Frequency:         2625 MHz\n",
        "\tImage Support:               Yes"
       ]
@@ -179,32 +182,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 - (OpenCL) AMD Ryzen 9 7950X 16-Core Processor (OpenCL 3.0 (Build 0))\n",
-      "\tVendor:                      Intel(R) Corporation\n",
-      "\tDriver Version:              2024.18.10.0.08_160000\n",
-      "\tDevice Type:                 CPU\n",
-      "\tCompute Units:               32\n",
-      "\tGlobal Memory Size:          127926 MB\n",
-      "\tMaximum Object Size:         63963 MB\n",
-      "\tMax Clock Frequency:         0 MHz\n",
+      "0 - (OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
+      "\tVendor:                      NVIDIA Corporation\n",
+      "\tDriver Version:              535.274.02\n",
+      "\tDevice Type:                 GPU\n",
+      "\tCompute Units:               128\n",
+      "\tGlobal Memory Size:          24183 MB\n",
+      "\tLocal Memory Size:           0 MB\n",
+      "\tMaximum Buffer Size:         6045 MB\n",
+      "\tMax Clock Frequency:         2520 MHz\n",
       "\tImage Support:               Yes\n",
       "1 - (OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
       "\tVendor:                      NVIDIA Corporation\n",
-      "\tDriver Version:              535.216.01\n",
+      "\tDriver Version:              535.274.02\n",
       "\tDevice Type:                 GPU\n",
       "\tCompute Units:               128\n",
       "\tGlobal Memory Size:          24183 MB\n",
-      "\tMaximum Object Size:         6045 MB\n",
+      "\tLocal Memory Size:           0 MB\n",
+      "\tMaximum Buffer Size:         6045 MB\n",
       "\tMax Clock Frequency:         2520 MHz\n",
       "\tImage Support:               Yes\n",
-      "2 - (OpenCL) NVIDIA GeForce RTX 4090 (OpenCL 3.0 CUDA)\n",
-      "\tVendor:                      NVIDIA Corporation\n",
-      "\tDriver Version:              535.216.01\n",
-      "\tDevice Type:                 GPU\n",
-      "\tCompute Units:               128\n",
-      "\tGlobal Memory Size:          24183 MB\n",
-      "\tMaximum Object Size:         6045 MB\n",
-      "\tMax Clock Frequency:         2520 MHz\n",
+      "2 - (OpenCL) AMD Ryzen 9 7950X 16-Core Processor (OpenCL 3.0 (Build 0))\n",
+      "\tVendor:                      Intel(R) Corporation\n",
+      "\tDriver Version:              2025.20.10.0.23_160000\n",
+      "\tDevice Type:                 CPU\n",
+      "\tCompute Units:               32\n",
+      "\tGlobal Memory Size:          127926 MB\n",
+      "\tLocal Memory Size:           0 MB\n",
+      "\tMaximum Buffer Size:         63963 MB\n",
+      "\tMax Clock Frequency:         0 MHz\n",
       "\tImage Support:               Yes\n",
       "\n"
      ]
@@ -225,7 +231,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skbe",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
