--- a/demos/basics/label_statistics.ipynb
+++ b/demos/basics/label_statistics.ipynb
@@ -860,7 +860,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skbe",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -874,7 +874,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
